# ml-marathon

./: README.md  pyproject.toml
task/: Day_001_HW_資料介紹與評估資料.ipynb  Day_002_HW_機器學習概論.ipynb  Day_003_HW_機器學習流程與步驟.ipynb  Day_004_HW_EDA讀取資料與分析流程.ipynb  Day_005-1_HW_新建dataframe.ipynb  Day_005-2_HW_讀取其他資料.ipynb
