[tool.poetry]
name = "ml-marathon"
version = "0.1.0"
description = ""
authors = ["tyiichiu <tyiichiu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
matplotlib = "^3.9.0"
notebook = "^7.2.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
tensorflow-macos = "2.14.0"
tensorflow-metal = "1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
